--- a/sprint4/S4.01/nivel2/build.gradle
+++ b/sprint4/S4.01/nivel2/build.gradle
@@ -14,9 +14,15 @@ repositories {
 }
 
 dependencies {
+	//compile('org.springframework.boot:spring-boot-starter-web')
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	
+	//compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
+    //compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
+	//compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	//compile group: 'io.springfox', name; 'springfox-swagger-ui', version: '2.9.2' 
 }
 
 tasks.named('test') {
