--- a/sprint4/S4.02/nivel1/src/main/resources/application.properties
+++ b/sprint4/S4.02/nivel1/src/main/resources/application.properties
@@ -2,3 +2,13 @@ spring.h2.console.enabled=true
 spring.datasource.platform=h2
 spring.datasource.url=jdbc:h2:mem:empleados
 
+
+#Multipart file config
+spring.servlet.multipart.enabled=true
+
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=800MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=800MB
