--- a/sprint4/S4.02/nivel1/src/main/resources/application.properties
+++ b/sprint4/S4.02/nivel1/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.h2.console.enabled=true
 spring.datasource.platform=h2
 spring.datasource.url=jdbc:h2:mem:empleados
 
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+
 
 #Multipart file config
 spring.servlet.multipart.enabled=true
