--- a/sprint5/s502/src/main/resources/application.properties
+++ b/sprint5/s502/src/main/resources/application.properties
@@ -1,1 +1,18 @@
-
+#config h2
+spring.h2.console.enabled=true
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:mem:jugadores
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+#Multipart file config
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=800MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=800MB
+#config de mysql
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/Arte
+#spring.datasource.username=root
+#spring.datasource.password=hola
+#spring.jpa.hibernate.ddl-auto=update
