--- a/sprint5/s502/src/main/resources/application.properties
+++ b/sprint5/s502/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/Game
 spring.datasource.username=root
 spring.datasource.password=hola
 spring.jpa.hibernate.ddl-auto=update
+jwt.secret = secret
