--- a/sprint5/s502/src/main/resources/application.properties
+++ b/sprint5/s502/src/main/resources/application.properties
@@ -12,8 +12,10 @@ spring.servlet.multipart.max-file-size=800MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=800MB
 #config de mysql
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/Game
-spring.datasource.username=root
-spring.datasource.password=hola
-spring.jpa.hibernate.ddl-auto=update
-jwt.secret = secret
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/Game
+#spring.datasource.username=root
+#spring.datasource.password=hola
+#spring.jpa.hibernate.ddl-auto=update
+#config mongodb
+spring.data.mongodb.database=game
+spring.data.mongodb.port=27017
