bug fix s501 and s502

--- a/sprint5/s502/pom.xml
+++ b/sprint5/s502/pom.xml
@@ -10,6 +10,7 @@
 	</parent>
 	<groupId>com.s502</groupId>
 	<artifactId>s502</artifactId>
+	
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>s502</name>
@@ -46,7 +47,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -62,7 +63,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-			<version>2.5.0</version>
 		</dependency>
 		
 		<dependency>
@@ -77,8 +77,28 @@
 			<version>2.9.2</version>
 		</dependency>
 		
+		<dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>1.16.2</version>
+            <scope>test</scope>
+        </dependency>
 		
-		
+		<dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+            <scope>compile</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.17.2</version>
+            <scope>test</scope>
+        </dependency>
+				
+	
 	</dependencies>
 
 	<build>
