--- a/sprint5/s502/src/main/resources/application.properties
+++ b/sprint5/s502/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #config h2
-#spring.h2.console.enabled=true
-#spring.datasource.platform=h2
-#spring.datasource.url=jdbc:h2:mem:jugadores
+spring.h2.console.enabled=true
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:mem:jugadores
 #spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 #Multipart file config
 spring.servlet.multipart.enabled=true
