--- a/sprint5/s502/src/main/resources/application.properties
+++ b/sprint5/s502/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #config h2
-spring.h2.console.enabled=true
-spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:mem:jugadores
+#spring.h2.console.enabled=true
+#spring.datasource.platform=h2
+#spring.datasource.url=jdbc:h2:mem:jugadores
 #spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 #Multipart file config
 spring.servlet.multipart.enabled=true
@@ -12,10 +12,10 @@ spring.servlet.multipart.max-file-size=800MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=800MB
 #config de mysql
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/Game
-#spring.datasource.username=root
-#spring.datasource.password=hola
-#spring.jpa.hibernate.ddl-auto=update
-#config mongodb
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/Game
+spring.datasource.username=root
+spring.datasource.password=hola
+spring.jpa.hibernate.ddl-auto=update
+config mongodb
 spring.data.mongodb.database=game
 spring.data.mongodb.port=27017
